RESOLVED FIXED89992
MutationObserver.observe should treat a null or undefined options argument as empty
https://bugs.webkit.org/show_bug.cgi?id=89992
Summary MutationObserver.observe should treat a null or undefined options argument as...
Adam Klein
Reported 2012-06-26 10:46:22 PDT
MutationObserver.observe should treat a null or undefined options argument as empty
Attachments
Patch (3.53 KB, patch)
2012-06-26 10:47 PDT, Adam Klein
no flags
Patch for landing (3.71 KB, patch)
2012-06-26 11:08 PDT, Adam Klein
no flags
Adam Klein
Comment 1 2012-06-26 10:47:43 PDT
Ojan Vafai
Comment 2 2012-06-26 11:04:47 PDT
Comment on attachment 149558 [details] Patch Might want to comment in the ChangeLog about why it's still a syntax error.
Adam Klein
Comment 3 2012-06-26 11:08:42 PDT
Created attachment 149564 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-06-26 12:37:15 PDT
Comment on attachment 149564 [details] Patch for landing Clearing flags on attachment: 149564 Committed r121278: <http://trac.webkit.org/changeset/121278>
WebKit Review Bot
Comment 5 2012-06-26 12:37:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.