MutationObserver.observe should treat a null or undefined options argument as empty https://bugs.webkit.org/show_bug.cgi?id=89992

Reviewed by Ojan Vafai.

Source/WebCore:

The WebIDL spec was recently updated to treat null or undefined
Dictionary arguments the same as the empty dictionary. This patch
updates MutationObserver.observe to follow that spec.

Note that we still throw a SYNTAX_ERR in this case, since it's an
error not to pass one of "attributes", "childList", or "characterData"
as a key in the dictionary.

* dom/WebKitMutationObserver.cpp:
(WebCore::WebKitMutationObserver::observe):

LayoutTests:

* fast/mutation/observe-exceptions-expected.txt:


Canonical link: https://commits.webkit.org/107847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121278 268f45cc-cd09-0410-ab3c-d52691b4dbfc